fix: scrollbars and button border

--- a/src/components/ComponentDemo/ComponentDemo.module.scss
+++ b/src/components/ComponentDemo/ComponentDemo.module.scss
@@ -19,6 +19,9 @@
 
 .container * {
   scrollbar-width: none;
+  &::-webkit-scrollbar {
+    width: 0 !important;
+  }
 }
 
 .knobless-container {
@@ -150,6 +153,9 @@ fieldset.form-group {
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
   border-bottom: 1px solid $ui-03;
+  &::-moz-focus-inner {
+    border: 0;
+  }
 }
 
 .preview-container {
